# cr2-to-jpg

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-22-photo-converter-english-cli.md
docs/superpowers/specs/: 2026-05-22-photo-converter-english-cli-design.md
tests/: test_main.py
